--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Welcome to EasyNRI!</h1>
-  <p>This site is now hosted with GitHub Pages!</p>
+  <p>This site is now hosted with GitHub Pages! on index.html page</p>
 </body>
 </html>
